--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wakamonoofthenight",
+  "name": "yorunowakamono",
   "version": "0.1.0",
   "type": "module",
   "private": true,
@@ -18,7 +18,7 @@
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
     "lenis": "^1.3.8",
-    "next": "15.4.2",
+    "next": "^15.5.7",
     "nodemon": "^3.1.10",
     "ogl": "^1.0.11",
     "react": "19.1.0",
@@ -36,7 +36,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.4.2",
+    "eslint-config-next": "^15.5.7",
     "tailwindcss": "^4"
   }
 }
